--- a/Style.css
+++ b/Style.css
@@ -21,4 +21,22 @@ nav {
 a {
     color: aliceblue;
     text-decoration: none;
+    position: relative;
+    padding: 0 10px;
+
+}
+
+a:after {
+    content:"";
+    position:absolute;
+    background-color: brown;
+    height: 3px;
+    width: 0%;
+    left: 0;
+    bottom: -10px;
+}
+
+a:hover:after{
+    width: 100%;
+
 }
